# Qt-game-with-t-e-r-r-a-r-i-a

./: CMakeLists.txt  citizen.cpp  citizen.h  city.pro  lift.cpp  lift.h  loader.cpp  loader.h  main.cpp  npc.cpp  npc.h  settings_form.cpp  settings_form.h  settings_form.ui  sprite.cpp  sprite.h  town.cpp  town.h  worker.cpp  worker.h
pixmap/: res.qrc
resource/: res.qrc
